--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-icons-kit": "^2.0.0",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
